--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_SECRET=a0bdd0d703e55d9234262f9def1ae3ee
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/DBTravel
+DATABASE_URL=mysql://root:@127.0.0.1:3306/dbtravelFinal
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
